cluster/auth/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: auth
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: api.repoflow.io/zhnurlan96-5303/blog/vault:12
        command: ["vault", "server", "-config=/vault/config/vault.hcl"]
        ports:
        - containerPort: 8200
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        volumeMounts:
        - name: vault-data
          mountPath: /vault/file
      volumes:
      - name: vault-data
        persistentVolumeClaim:
          claimName: vault-data
