cluster/auth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: auth
spec:
  selector:
    app: vault
  ports:
  - protocol: TCP
    port: 8200
    targetPort: 8200
