cluster/auth/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-tls-ingress
  namespace: auth
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: vault.nurlashko.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
  tls:
    - secretName: vault-tls
      hosts:
        - vault.nurlashko.dev
